tests/algorithms/x/C/backtracking/all_permutations.c
// Generated by Mochi 0.10.32 on 2025-08-06 16:21 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t repeat_bool_len;
size_t set_bool_len;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

int sequence_init[4] = {3LL, 1LL, 2LL, 4LL};
int *sequence = sequence_init;
size_t sequence_len = 4;
int sequence_2_init[3] = {"A", "B", "C"};
int *sequence_2 = sequence_2_init;
size_t sequence_2_len = 3;

int * repeat_bool(long long times);
int * set_bool(int * xs, size_t xs_len, long long idx, int value);
void create_state_space_tree(int * sequence, size_t sequence_len, int * current, size_t current_len, long long index, int * used, size_t used_len);
void generate_all_permutations(int * sequence, size_t sequence_len);
int main(void);

int * repeat_bool(long long times) {
    int *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < times) {
        res = list_append_long_long(res, &res_len, 0LL);
        i = i + 1LL;
    }
    return repeat_bool_len = res_len, res;
}

int * set_bool(int * xs, size_t xs_len, long long idx, int value) {
    int *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_int(res, &res_len, value);
        } else {
            res = list_append_int(res, &res_len, xs[(int)(i)]);
        }
        i = i + 1LL;
    }
    return set_bool_len = res_len, res;
}

void create_state_space_tree(int * sequence, size_t sequence_len, int * current, size_t current_len, long long index, int * used, size_t used_len) {
    if (index == sequence_len) {
        puts(str_list_int(current, current_len));
        return 0;
    }
    long long i = 0LL;
    while (i < sequence_len) {
        if (!(used[(int)(i)])) {
            int *next_current = list_append_int_new(current, current_len, sequence[(int)(i)]);
            size_t next_current_len = current_len + 1;
            int *next_used = set_bool(used, used_len, i, 1LL);
            size_t next_used_len = set_bool_len;
            create_state_space_tree(sequence, sequence_len, next_current, next_current_len, index + 1LL, next_used, next_used_len);
        }
        i = i + 1LL;
    }
}

void generate_all_permutations(int * sequence, size_t sequence_len) {
    int *used = repeat_bool(sequence_len);
    size_t used_len = repeat_bool_len;
    create_state_space_tree(sequence, sequence_len, NULL, 0, 0LL, used, used_len);
}

int main(void) {
    {
        long long __start = _now();
        generate_all_permutations(sequence, sequence_len);
        generate_all_permutations(sequence_2, sequence_2_len);
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
